made cli help work

--- a/forms/rtimvMainWindow.ui
+++ b/forms/rtimvMainWindow.ui
@@ -80,6 +80,9 @@
        <property name="horizontalScrollBarPolicy">
         <enum>Qt::ScrollBarAlwaysOff</enum>
        </property>
+       <property name="sizeAdjustPolicy">
+        <enum>QAbstractScrollArea::AdjustIgnored</enum>
+       </property>
        <property name="interactive">
         <bool>true</bool>
        </property>
@@ -91,8 +94,17 @@
          <height>0.000000000000000</height>
         </rectf>
        </property>
+       <property name="transformationAnchor">
+        <enum>QGraphicsView::AnchorUnderMouse</enum>
+       </property>
+       <property name="resizeAnchor">
+        <enum>QGraphicsView::AnchorUnderMouse</enum>
+       </property>
        <property name="viewportUpdateMode">
         <enum>QGraphicsView::SmartViewportUpdate</enum>
+       </property>
+       <property name="rubberBandSelectionMode">
+        <enum>Qt::IntersectsItemBoundingRect</enum>
        </property>
        <property name="optimizationFlags">
         <set>QGraphicsView::DontAdjustForAntialiasing</set>
