--- a/forms/imviewerControlPanel.ui
+++ b/forms/imviewerControlPanel.ui
@@ -30,7 +30,7 @@
     </font>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>2</number>
    </property>
    <property name="usesScrollButtons">
     <bool>false</bool>
@@ -141,6 +141,7 @@
      </property>
      <property name="font">
       <font>
+       <pointsize>10</pointsize>
        <weight>50</weight>
        <bold>false</bold>
       </font>
@@ -352,6 +353,7 @@
      </property>
      <property name="font">
       <font>
+       <pointsize>10</pointsize>
        <weight>50</weight>
        <bold>false</bold>
       </font>
@@ -815,6 +817,7 @@
      </property>
      <property name="font">
       <font>
+       <pointsize>10</pointsize>
        <weight>50</weight>
        <bold>false</bold>
       </font>
@@ -1271,6 +1274,7 @@
      </property>
      <property name="font">
       <font>
+       <pointsize>10</pointsize>
        <weight>50</weight>
        <bold>false</bold>
       </font>
@@ -1335,6 +1339,7 @@
      </property>
      <property name="font">
       <font>
+       <pointsize>10</pointsize>
        <weight>50</weight>
        <bold>false</bold>
       </font>
@@ -1376,6 +1381,7 @@
      </property>
      <property name="font">
       <font>
+       <pointsize>10</pointsize>
        <weight>50</weight>
        <bold>false</bold>
       </font>
@@ -1440,6 +1446,7 @@
      </property>
      <property name="font">
       <font>
+       <pointsize>10</pointsize>
        <weight>50</weight>
        <bold>false</bold>
       </font>
@@ -1488,6 +1495,7 @@
      </property>
      <property name="font">
       <font>
+       <pointsize>10</pointsize>
        <weight>50</weight>
        <bold>false</bold>
       </font>
@@ -1504,6 +1512,7 @@
      </property>
      <property name="font">
       <font>
+       <pointsize>10</pointsize>
        <weight>50</weight>
        <bold>false</bold>
       </font>
@@ -1520,6 +1529,7 @@
      </property>
      <property name="font">
       <font>
+       <pointsize>10</pointsize>
        <weight>50</weight>
        <bold>false</bold>
       </font>
@@ -1537,6 +1547,8 @@
      <property name="font">
       <font>
        <pointsize>10</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
       </font>
      </property>
      <property name="text">
@@ -1558,6 +1570,8 @@
      <property name="font">
       <font>
        <pointsize>10</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
       </font>
      </property>
      <property name="text">
@@ -1579,6 +1593,8 @@
      <property name="font">
       <font>
        <pointsize>10</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
       </font>
      </property>
      <property name="text">
@@ -1599,6 +1615,7 @@
      </property>
      <property name="font">
       <font>
+       <pointsize>10</pointsize>
        <weight>50</weight>
        <bold>false</bold>
       </font>
@@ -1624,6 +1641,7 @@
      </property>
      <property name="font">
       <font>
+       <pointsize>10</pointsize>
        <weight>50</weight>
        <bold>false</bold>
       </font>
@@ -1649,6 +1667,7 @@
      </property>
      <property name="font">
       <font>
+       <pointsize>10</pointsize>
        <weight>50</weight>
        <bold>false</bold>
       </font>
@@ -1674,6 +1693,7 @@
      </property>
      <property name="font">
       <font>
+       <pointsize>10</pointsize>
        <weight>50</weight>
        <bold>false</bold>
       </font>
@@ -1810,6 +1830,32 @@
      </property>
      <property name="text">
       <string>Show Stats Box</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="toolTipCoordsButton">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>130</y>
+       <width>191</width>
+       <height>24</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Show Pointer Coords</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="staticCoordsButton">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>160</y>
+       <width>191</width>
+       <height>24</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Show Static Coords</string>
      </property>
     </widget>
    </widget>
